Fixed alignment of images

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -32,8 +32,9 @@ blockquote {
 	border-left: 0;
 }
 
-img {
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+figure {
+	text-align: center;
+	figcaption {
+		text-align: left;
+	}
 }
